--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /Rekrutacja/bin
-/Rekrutacja/Rekrutacja.Tests
 /Rekrutacja/Rekrutacja.UI/obj
 /Rekrutacja/Rekrutacja/obj
+/Rekrutacja/Rekrutacja.Tests/bin
+/Rekrutacja/Rekrutacja.Tests/obj
